--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,24 +4,24 @@
             <form>
                 <div class="form-group">
                     <label for="email">Owner Email</label>
-                    <input type="email" class="form-control">
+                    <input type="email" name="email" class="form-control" [(ngModel)]="email">
                 </div>
                 <div class="form-group">
                     <label for="restaurantName">Restaurant Name</label>
-                    <input type="text" name="restaurantName" class="form-control">
+                    <input type="text" name="restaurantName" class="form-control" [(ngModel)]="restaurantName">
                 </div>
                 <div class="form-group">
                     <label for="restaurantAddress">Restaurant Address</label>
-                    <input type="text" name="restaurantAddress" class="form-control">
+                    <input type="text" name="restaurantAddress" class="form-control" [(ngModel)]="restaurantAddress">
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control">
+                    <input type="password" name="password" class="form-control" [(ngModel)]="password">
                 </div>
                 <div class="text-right">
                     <a routerLink="" class="text-info"><small>Already Registered? Login here</small></a>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn btn-primary" (click)="signUp()">Sign Up</button>
             </form>
         </div>
     </div>
