--- a/src/app/edit-reservation/edit-reservation.component.html
+++ b/src/app/edit-reservation/edit-reservation.component.html
@@ -2,21 +2,21 @@
     <h1 class="display-4">{{ restaurantName }}</h1>
     <button id="reserveBtn" class="btn btn-info" (click)="logOut()">Log Out</button>
 </div>
-<div class="container border border-primary rounded" id="add-reservation-form">
+<div class="container border border-primary rounded" id="edit-reservation-form">
     <div class="row">
         <div class="col-md p-5">
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" name="name" [(ngModel)]="name">
+                    <input type="text" class="form-control" name="name" [(ngModel)]="name" disabled>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" name="email" [(ngModel)]="email">
+                    <input type="email" class="form-control" name="email" [(ngModel)]="email" disabled>
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input type="tel" class="form-control" name="phone" [(ngModel)]="phone">
+                    <input type="tel" class="form-control" name="phone" [(ngModel)]="phone" disabled>
                 </div>
                 <div class="form-group">
                     <label for="date">Date</label>
@@ -24,10 +24,9 @@
                 </div>
                 <div class="form-group">
                     <label for="time">Time</label>
-                    <input type="time" class="form-control" min="18:00" max="22:00" value="18:00" name="time"
-                        [(ngModel)]="time">
+                    <input type="time" class="form-control" name="time" [(ngModel)]="time">
                 </div>
-                <button type="submit" class="btn btn-primary" (click)="addReservation()">Add</button>
+                <button type="submit" class="btn btn-primary" (click)="updateReservation()">Update</button>
             </form>
         </div>
     </div>
